--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@coveo/headless": "^1.19.0",
     "@coveo/search-token-server": "^1.14.0",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.57",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.1.0",
@@ -49,6 +47,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "sass": "^1.39.0"
   }
 }
